# python-sdk

./: CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  SECURITY.md  _agent.py  pyproject.toml
generator/: generate.py  ir.json  overrides.json  parser.py
generator/templates/: compute_init.py.j2  service.py.j2  types.py.j2
hexel/: __init__.py  _client.py  response.py
hexel/_internal/: auth.py  http.py  ws.py
hexel/compute/: __init__.py  _instance.py  _sandbox.py  types.py
hexel/instrument/: __init__.py  _anthropic.py  _collector.py  _openai.py
hexel/orchestrator/: __init__.py  _approval.py  _fleet.py  _task.py
specs/: agent-registry-api.json  agentd-api.json  approval-service-api.json  compute-api.json  fleet-manager-api.json  task-service-api.json  workflow-executor-api.json
