[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "hexel"
version = "0.1.0"
description = "Hexel SDK — deploy and run AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["ai", "agents", "compute", "hexel", "sandbox"]
dependencies = [
    "httpx>=0.27",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = ["pytest", "jinja2"]
