[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hexel"
version = "0.2.1"
description = "Hexel Studio SDK — deploy and run AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["ai", "agents", "compute", "hexel", "sandbox", "code-execution"]
authors = [
    { name = "Hexel Studio", email = "support@hexelstudio.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "websockets>=12.0",
]

[project.urls]
Homepage = "https://hexelstudio.com"
Documentation = "https://docs.hexelstudio.com"
Repository = "https://github.com/hexelstudio/python-sdk"
Changelog = "https://docs.hexelstudio.com/changelog"

[project.optional-dependencies]
dev = ["pytest", "jinja2"]

[tool.hatch.build.targets.wheel]
packages = ["hexel"]
